src/test/ui-fulldeps/macro-crate-rlib.stderr
error[E0457]: plugin `rlib_crate_test` only found in rlib format, but must be available in dylib format
  --> $DIR/macro-crate-rlib.rs:6:11
   |
LL | #![plugin(rlib_crate_test)]
   |           ^^^^^^^^^^^^^^^

error: aborting due to previous error

